--- a/src/test/resources/NAB_AL_Tools.da-DK.xlf
+++ b/src/test/resources/NAB_AL_Tools.da-DK.xlf
@@ -4,20 +4,15 @@
     <body>
       <group id="body">
         <trans-unit id="Table 2328808854 - Field 1296262999 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Herro123</source>
-           <target>[NAB: NOT TRANSLATED]</target>
+          <source>No Target</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table MyTable - Field MyField - Property Caption</note>
         </trans-unit>        
         <trans-unit id="Table 2328808854 - Field 1296262074 - Method 2126772001 - NamedType 1978266064" size-unit="char" translate="yes" xml:space="preserve">
-          <source>OnValidate Error</source>
+          <source>>Change In Source</source>
+          <target>this should get review token</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table MyTable - Field MyField - Method OnValidate - NamedType TestOnValidateErr</note>
-        </trans-unit>
-        <trans-unit id="Table 2328808854 - Field 3945078064 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
-          <source>My Field 2 Caption</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Table MyTable - Field MyField2 - Property Caption</note>
         </trans-unit>
         <trans-unit id="Table 2328808854 - Field 2443090863 - Property 62802879" size-unit="char" translate="yes" xml:space="preserve">
           <source> ,asdf,erew,fieldOptionCaption</source>
