refreshXlfFilesFromGXlf with classes

--- a/extension/src/test/resources/NAB_AL_Tools.da-DK.xlf
+++ b/extension/src/test/resources/NAB_AL_Tools.da-DK.xlf
@@ -7,9 +7,9 @@
           <source>No Target</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table MyTable - Field MyField - Property Caption</note>
-        </trans-unit>        
+        </trans-unit>
         <trans-unit id="Table 2328808854 - Field 1296262074 - Method 2126772001 - NamedType 1978266064" size-unit="char" translate="yes" xml:space="preserve">
-          <source>>Change In Source</source>
+          <source>Change In Source</source>
           <target>this should get review token</target>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table MyTable - Field MyField - Method OnValidate - NamedType TestOnValidateErr</note>
