--- a/extension/src/test/resources/NAB_AL_Tools.sv-SE.xlf
+++ b/extension/src/test/resources/NAB_AL_Tools.sv-SE.xlf
@@ -36,6 +36,8 @@
         </trans-unit>
         <trans-unit id="Page 2931038265 - Control 4105281732 - Property 1968111052" size-unit="char" translate="yes" xml:space="preserve">
           <source>Group InstructionalText</source>
+          <target>Translated text</target>
+          <note from="NAB AL Tools" annotates="general" priority="3">New translation</note>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page MyPage - Control GroupName - Property InstructionalText</note>
         </trans-unit>
